--- a/DevOpsDjango/Dockerfile
+++ b/DevOpsDjango/Dockerfile
@@ -10,9 +10,9 @@ RUN apt-get update && apt-get install -y \
     libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
-COPY requirements.txt .
+COPY reqs.txt .
 
-RUN pip install --upgrade pip && pip install -r requirements.txt
+RUN pip install --upgrade pip && pip install -r reqs.txt
 
 COPY . .
 
