Dockerhub repository was renamed at Jenkinsfile! Dockerfile updated.

--- a/DevOpsDjango/Dockerfile
+++ b/DevOpsDjango/Dockerfile
@@ -5,6 +5,7 @@ ENV PYTHONUNBUFFERED=1
 
 WORKDIR /app
 
+# Устанавливаем зависимости системы
 RUN apt-get update && apt-get install -y \
     build-essential \
     libpq-dev \
@@ -13,7 +14,7 @@ RUN apt-get update && apt-get install -y \
 # Копируем файл зависимостей
 COPY reqs.txt .
 
-# Устанавливаем зависимости
+# Устанавливаем pip и зависимости
 RUN pip install --upgrade pip && pip install -r reqs.txt
 
 # Копируем остальные файлы
@@ -28,4 +29,4 @@ RUN python manage.py collectstatic --noinput --verbosity 3
 EXPOSE 8000
 
 # Запуск приложения через gunicorn
-CMD ["gunicorn", "project_name.wsgi:application", "--bind", "0.0.0.0:8000"]
+CMD ["gunicorn", "DevOpsDjango.wsgi:application", "--bind", "0.0.0.0:8000"]
